[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/storm/rainManager.gd" type="Script" id=1]
[ext_resource path="res://assets/images/raindropsplat.png" type="Texture" id=2]
[ext_resource path="res://assets/images/raindrop.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/334149__svampen__rain-heavy-loopable.ogg" type="AudioStream" id=4]

[node name="rainManager" type="Node2D"]
script = ExtResource( 1 )
rain_amount = 3
rain_angle = 45.0

[node name="rainSplatParticles" type="CPUParticles2D" parent="."]
amount = 400
lifetime = 0.3
preprocess = 1.0
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 400, 300 )
gravity = Vector2( 0, 0 )

[node name="rainParticles" type="CPUParticles2D" parent="."]
position = Vector2( -400, -400 )
amount = 800
lifetime = 3.0
preprocess = 5.0
randomness = 1.0
local_coords = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 600, 300 )
flag_align_y = true
gravity = Vector2( 70.7107, 70.7107 )
initial_velocity = 0.0
angle_random = 0.5

[node name="rainSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
